[gd_scene load_steps=7 format=2]

[ext_resource path="res://Camera2DScript.gd" type="Script" id=1]
[ext_resource path="res://Minigame2.tscn" type="PackedScene" id=2]
[ext_resource path="res://Minigame2SplitScreenScript.gd" type="Script" id=3]
[ext_resource path="res://fonts/ARCADEPI.TTF" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 13
outline_size = 2
font_data = ExtResource( 4 )

[node name="Minigame2SplitScreen" type="Node"]
script = ExtResource( 3 )

[node name="Viewports" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ViewportContainer1" type="ViewportContainer" parent="Viewports"]
margin_right = 509.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport1" type="Viewport" parent="Viewports/ViewportContainer1"]
size = Vector2( 509, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer1/Viewport1"]
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 3.0
script = ExtResource( 1 )

[node name="Node2D" parent="Viewports/ViewportContainer1/Viewport1" instance=ExtResource( 2 )]

[node name="ViewportContainer2" type="ViewportContainer" parent="Viewports"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
stretch = true

[node name="Viewport2" type="Viewport" parent="Viewports/ViewportContainer2"]
size = Vector2( 510, 600 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="Viewports/ViewportContainer2/Viewport2"]
current = true
zoom = Vector2( 0.5, 0.5 )
smoothing_enabled = true
smoothing_speed = 3.0
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 163.0
margin_top = 40.0
margin_right = 510.0
margin_bottom = 60.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 139, 20 )
custom_colors/font_color_shadow = Color( 0.0705882, 0.054902, 0.054902, 1 )
custom_fonts/font = SubResource( 1 )
text = "Sullivan (WASD)"

[node name="Label3" type="Label" parent="."]
margin_left = 674.0
margin_top = 44.0
margin_right = 1023.0
margin_bottom = 64.0
rect_scale = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 139, 20 )
custom_colors/font_color_shadow = Color( 0.105882, 0.0745098, 0.0745098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Stephanie (Arrows)"

[node name="Objective" type="Label" parent="."]
margin_left = 11.0
margin_top = 62.0
margin_right = 332.0
margin_bottom = 111.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Goal: Complete the Maze
Item: Confetti"

[node name="Objective2" type="Label" parent="."]
margin_left = 525.0
margin_top = 66.0
margin_right = 846.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Goal: Complete the Maze
Item: Confetti"
